# streamlit_project

./: .dockerignore  .env  .gitignore  README.md  SECURITY.md  _config.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml  lint.yml  pytest.yml
service/: Dockerfile  Dockerfile.test  pyproject.toml  pytest.ini  requirements.test.txt  requirements.txt
service/app/: __init__.py  main.py
service/data/: sample.csv
service/tests/: test_main.py  test_smoke.py
